# CurvedWeaving

./: README.md  environment.yml
elastic_rods/: .gitignore  .gitmodules  CMakeLists.txt  CShellOptimization.hh  CShellOptimization.inl  ConstrainedCShellOptimization.hh  ConstrainedCShellOptimization.inl  DesignOptimizationTerms.hh  LinkageOptimization.inl  RegularizationTerms.hh  RodLinkage.cc  RodLinkage.hh  RodLinkageHessVec.inl  SurfaceAttractedLinkage.hh  TargetSurfaceFitter.cc  TargetSurfaceFitter.hh  WeavingOptimization.hh  WeavingOptimization.inl  XShellOptimization.hh  XShellOptimization.inl  knitro.hh
elastic_rods/python/: fd_weaver_editor.py  linkage_vis.py
elastic_rods/python_bindings/: elastic_rods.cc  (+1 more)
elastic_rods/weaver_editor/: CMakeLists.txt  weaver_editor.cc  weaver_editor_helper.hh  weaver_editor_set_up.hh
weaving/: analysis_helper.py  bunny_visualization.ipynb  compute_curve_from_curvature.py  curvature_comparison.py  deactivate_crossing_helper.py  force_vector_visualization_helper.py  gh_optimization_diagram.py  gh_optimizer.py  gh_optimizer_helper.py  helper.py  hemoglobin_flipping_all.ipynb  hemoglobin_flipping_greedy.ipynb  hemoglobin_vis_helper.py  hemoglobin_visualization.ipynb  optimization_diagram.py  optimization_visualization_helper.py  pipeline_helper.py  render_optimized_results.py  ribbon_linkage_helper.py  siggraph_benchmark_visualization.ipynb  singularity_helper.py  surface_inference.py  torus_regularization.ipynb  view_pickles.ipynb  weave_from_topology.py  webapp_compute_curve_from_curvature.py  webappio.ipynb  woven_model.json
(+177 files in other folders)
